# PolyNet

./: .gitignore  LICENSE  README.md  config.yaml  experiments.ipynb  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: format-code.yml  tests.yml
configs/: experiment.yaml
docs/: README.md  api-reference.md  configuration.md  descriptors.md  development.md  explainability.md  gui-and-architecture.md  running-and-outputs.md
polynet/: call_methods.py
polynet/app/: Welcome_to_PolyNet.py
polynet/app/components/: experiments.py  graph_display.py  plots.py
polynet/app/options/: allowable_sets.py  data.py  file_paths.py  general_experiment.py  representation.py  search_grids.py  state_keys.py  train_GNN.py  train_TML.py
polynet/app/pages/: 0_Create_Experiment.py  1_Create_Experiment.py  1_Representation.py  2_Hyperparameter_Optimisation.py  2_Representation.py  3_Train_Models.py  4_Analyse_Results.py  4_Explain_Models.py  4_Predict.py  5_Analyse_Results.py  5_Explain_Models.py  5_Predict.py  6_Analyse_Results.py
polynet/app/services/: configurations.py  descriptors.py  experiments.py  explain_model.py  explain_source.py  explain_tml.py  graph_viz.py  model_training.py  plot.py  predict_model.py  train_gnn.py  train_tml.py
polynet/app/utils/: __init__.py
polynet/config/: _loader.py  column_names.py  constants.py  display_names.py  enums.py  experiment.py  from_app.py  from_yaml.py  io.py  paths.py  search_grid.py
polynet/config/schemas/: base.py  (+11 more)
polynet/data/: __init__.py  creator.py  feature_transformer.py  loader.py  preprocessing.py
polynet/experiment/: __init__.py  manager.py
polynet/explain/: explain_mol.py
polynet/explainability/: __init__.py  attributions.py  embeddings.py  explain.py  fragments.py  masking.py  pipeline.py  shap_explain.py  visualization.py
polynet/factories/: __init__.py  dataloader.py  loss.py  network.py  optimizer.py
polynet/featurizer/: __init__.py  allowable_sets.py  descriptor_calculation.py  descriptors.py  feature_selection.py  graph.py  pmx.py  polymer_graph.py  preprocess.py  selection.py
polynet/inference/: __init__.py  gnn.py  predict.py  tml.py  utils.py
polynet/models/: CGGNN.py  GAT.py  GCN.py  GNN.py  MPNN.py  TransfomerGNN.py  __init__.py  base.py  graphsage.py  persistence.py
polynet/options/: col_names.py  enums.py  search_grids.py
polynet/pages/: Welcome.py
polynet/pipeline/: __init__.py  stages.py
polynet/plotting/: data_analysis.py
polynet/predict/: predict_gnn.py  predict_tml.py
polynet/train/: evaluate_model.py  model_utils.py  train_gnn.py  train_tml.py
polynet/training/: __init__.py  evaluate.py  gnn.py  hyperopt.py  metrics.py  tml.py
polynet/utils/: __init__.py  canonicalise_psmiles.py  chem_utils.py  data_preprocessing.py  graph_analysis.py  model_training.py  plot_utils.py  psmiles.py  split_data.py  statistical_analysis.py
polynet/visualization/: __init__.py  plots.py  utils.py
scripts/: integration_test.py  run_pipeline.py
tests/: conftest.py  generate_pipeline_fixtures.py  test_attachment_point_feature.py  test_chem_utils.py  test_compute_rdkit.py  test_config_loader.py  test_descriptors_regression.py  test_edgeless_graph.py  test_explain_source.py  test_merging.py  test_model_backcompat.py  test_per_monomer_pool.py  test_persistence.py  test_pipeline_regression.py  test_ratio_normalization.py  test_shap_class_selection.py
tests/fixtures/: expected_concatenate.csv  expected_no_merging.csv  expected_weighted_average.csv  input_polymers.csv
(+23 files in other folders)
