[tool.poetry]
name = "polynet"
version = "0.1.0"
description = "Polymer Property Predictions and Biomaterials Design"
authors = ["Eduardo Aguilar-Bejarano <eduardo.aguilar-bejarano@nottingham.ac.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
rdkit = "^2025.3.2"
torch = "~2.2.0"
torch-geometric = "^2.6.1"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
numpy = "^2.2.6"
scipy = "^1.15.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]
skip-magic-trailing-comma = true
required-version = "25"

[tool.isort]
profile = "black"
line_length = 100
force_sort_within_sections = true
