[tool.poetry]
name = "polynet"
version = "0.1.0"
description = "Polymer Property Predictions and Biomaterials Design"
authors = ["Eduardo Aguilar-Bejarano <eduardo.aguilar-bejarano@nottingham.ac.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^2.2.3"
rdkit = "^2025.3.2"
torch = [
  { version = "2.2.0", markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'" },
  { version = ">=2.5.1,<3.0.0", markers = "sys_platform != 'darwin' or platform_machine != 'x86_64'" }
]
torch-geometric = "2.7"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
numpy = "^2.4.4"
scipy = "^1.15.3"
ipykernel = "^6.24.0"
streamlit = "^1.45.1"
plotly = "^6.1.1"
black = "^25.1.0"
imbalanced-learn = ">=0.14.0,<0.15.0"
xgboost = "^3.0.2"
isort = "^6.0.1"
statsmodels = "^0.14.5"
ray = "^2.51.0"
pydantic = "^2.12.3"
canonicalize-psmiles = {git = "https://github.com/kuennethgroup/canonicalize_psmiles.git"}
sentence-transformers = "^5.2.3"
polymetrix = "^0.2.0"
shap = "^0.51.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]
skip-magic-trailing-comma = true
required-version = "25"

[tool.isort]
profile = "black"
line_length = 100
force_sort_within_sections = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: end-to-end pipeline tests that run GNN and TML training (~30-60s total)",
]
